src/test/deca/syntax/parser/invalid/if_without_cond.deca
// Test parser, if sans condition (pas de parenthèses)

{
    if {
        print(5);
    }
}